v2.7 finalizar correção de erros sonar lint(agora sim ficou bonito)